...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="end">

        <Button
            android:id="@+id/downloadPauseResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_action_pause"/>

        <Button
            android:id="@+id/downloadRetry"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:text="@string/download_action_remove"
            android:visibility="gone"/>

        <Button
            android:id="@+id/downloadCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:text="@string/download_action_cancel"/>

        <Button
...
